--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
             - ./nginx_reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro
             - ./store/static/files:/static:ro
         links:
-            - gunicorn
             - node
+            - gunicorn
 
     graphite:
         image: graphiteapp/graphite-statsd:1.1.5-7
@@ -41,6 +41,13 @@ services:
             - "/var/run:/var/run:rw"
             - "/sys:/sys:ro"
             - "/var/lib/docker/:/var/lib/docker:ro"
+
+    node:
+        build: './js'
+
+    gunicorn:
+        build: './py'
+
 
 volumes:
     grafana_config:
