--- a/nginx_reverse_proxy.conf
+++ b/nginx_reverse_proxy.conf
@@ -2,26 +2,35 @@ upstream node_uptream {
   server node:3000;
 }
 
-upstream python_replicated {
+upstream gunicorn_uptream {
+  server gunicorn:8000;
+}
+
+upstream gunicorn_replicated {
   server gunicorn_1:8000;
   server gunicorn_2:8000;
   server gunicorn_3:8000;
+  server gunicorn_4:8000;
 }
 
-upstream gunicorn_uptream {
-  server gunicorn:8000;
+upstream gunicorn_multiworker {
+  server gunicorn_multiworker:8000;
 }
 
 server {
   location /node/ {
     proxy_pass http://node_uptream/;
   }
-  
-  location /python_replicated/ {
-    proxy_pass http://python_replicated/;
-  }
 
   location /gunicorn/ {
     proxy_pass http://gunicorn_uptream/;
+  }
+
+  location /gunicorn_replicated/ {
+    proxy_pass http://gunicorn_replicated/;
+  }
+
+  location /gunicorn_multiworker/ {
+    proxy_pass http://gunicorn_multiworker/;
   }
 }
