--- a/py/Dockerfile
+++ b/py/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.6.7
 
+ENV GUNICORN_WORKERS 1
+
 WORKDIR /app
 
 COPY requirements.txt .
@@ -8,4 +10,4 @@ RUN pip3 install -r requirements.txt
 
 COPY app.py .
 
-CMD ["gunicorn", "--reload", "-b", "0.0.0.0:8000", "-w", "1", "app:app"]
+CMD gunicorn --reload -b 0.0.0.0:8000 -w $GUNICORN_WORKERS app:app
